@@ -10,8 +10,8 @@ Maintainer: Michael Friendly <friendly@yorku.ca>
 Description: This package provides the tables from Sean Lahman's Baseball Database as a set of R data.frames.
     It uses the data on pitching, hitting and fielding performance and other tables from 1871 through 2010, as recorded
     in version 5.8 of the database.
-Depends: R (>= 2.10), plyr
-Suggests: lattice, ggplot2, googleVis, data.table, vcd
+Depends: R (>= 2.10)
+Suggests: lattice, ggplot2, googleVis, data.table, vcd, plyr
 License: GPL
 LazyLoad: yes
 LazyData: yes
